@@ -36,15 +36,6 @@ void free (void * ptr);
 
 #else
 
-#define MEMHEADER   struct MAH// Memory Allocation Header
-
-MEMHEADER
-{
-      MEMHEADER __xdata *  next;
-      unsigned int       len;
-      unsigned char      mem[];
-};
-
 extern void init_dynamic_memory(void xdata * heap, unsigned int size);
 extern void xdata * calloc (size_t nmemb, size_t size);
 extern void xdata * malloc (size_t size);
